@@ -198,6 +198,7 @@ export(
   , qtR, qtR1
   , r_pois, r_pois_expr
     ## no! titleR.exp (FIXME eventually: should not need such a global)
+  , rexpm1
 
   , chebyshevPoly, chebyshevEval, chebyshev_nc
 )
